@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.296 2006/02/14 10:26:26 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.297 2006/02/14 14:12:06 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -153,6 +153,10 @@ PH/28 An enabling patch from MH: add new function child_open_exim2() which
       allows the sender and the authenticated sender to be set when
       submitting a message from within Exim. Since child_open_exim() is
       documented for local_scan(), the new function should be too.
+
+PH/29 In GnuTLS, a forced expansion failure for tls_privatekey was not being
+      ignored. In both GnuTLS and OpenSSL, an expansion of tls_privatekey that
+      results in an empty string is now treated as unset.
 
 
 Exim version 4.60
